--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,13 @@
   --page-background-color: #222629;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 .default-bg-color {
   background: linear-gradient(var(--page-background-color), rgba(0, 0, 0, 0.984));
 }
