--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,10 @@
   --page-background-color: #222629;
 }
 
+button, [type=button], [type=reset], [type=submit] {
+  -webkit-appearance: button !important;
+}
+
 * {
   margin: 0;
   padding: 0;
