--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -167,3 +167,14 @@
   text-align: center;
 }
 
+.bg-image {
+  background: url('../assets/images/home/bg.png') no-repeat;
+  background-size:cover;
+}
+
+/* so Learn More is stacked */
+@media only screen and (max-width: 483.20px) {
+  .wordSpacing {
+    word-spacing: 100vw;
+  }
+}
