--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -173,8 +173,40 @@
 }
 
 /* so Learn More is stacked */
-@media only screen and (max-width: 483.20px) {
+/* @media only screen and (max-width: 483.20px) {
   .wordSpacing {
     word-spacing: 100vw;
   }
+} */
+
+.fs-header {
+  font-size: 2.5rem;
+}
+
+.fs-para {
+  font-size: 1.5rem;
+
+}
+@media only screen and (max-width: 664px) {
+  .fs-header {
+    font-size: 1.5rem;
+  }
+  
+  .fs-para {
+    font-size: 1rem;
+  
+  }
+}
+
+.btn-container {
+  column-gap: 1rem;
+
+}
+@media only screen and (max-width: 466px) {
+.btn-container {
+  flex-direction: column;
+  row-gap: 1rem;
+  align-items: center;
+
+}
 }
