--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -210,3 +210,23 @@
 
 }
 }
+
+
+.light-border-input {
+  background-color:black !important;
+  color:white !important;
+   border-color:#333333 ;
+   outline: none !important;
+   border-radius:0
+
+}
+
+.light-border-input:focus {
+  border-color:rgb(119 116 116) !important;
+
+}
+
+.btn-inspiration {
+  letter-spacing: 0.3px;
+  flex: 1 1 0%
+}
