--- a/src/styles/login-styles/StepPassword.module.css
+++ b/src/styles/login-styles/StepPassword.module.css
@@ -1,20 +1,5 @@
 .password-input {
-    background-color: black !important;
-    color: white !important;
-    border-color: #333333;
-    padding:15px;
     border-right:none;
-
-}
-
-.password-input:focus {
-    background-color: black;
-    border-color: white;
-
-}
-
-.password-input::placeholder {
-    color:rgba(255, 255, 255, 0.208)
 }
 
 .button {
@@ -33,7 +18,6 @@
 .password-eye {
     background-color: black !important;
     border-color: #333333;
-    padding: 15px 25px 15px 15px;
     color: white !important;
     display:block;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out !important;
@@ -41,7 +25,7 @@
 }
 
 .password-input:focus + .password-eye {
-    border-color: white;
-  }
+    border-color:rgb(119 116 116) !important
+}
 
 
