--- a/src/styles/Community.module.css
+++ b/src/styles/Community.module.css
@@ -1,16 +1,56 @@
 .grid {
-    display:grid;
-    gap: 2rem;
-    grid-template-columns:repeat(auto-fit, minmax(15em, 1fr))
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
+  grid-auto-rows: auto;
 }
 
-
-  
 .object-fit {
-    max-width:100%;
-    height:auto;
-  }
+  max-width: 100%;
+  height: auto;
+}
 
-  .community-banner {
-    background: linear-gradient(to right, #040404, 70%, transparent), url("../assets/images/communityBanner.png") right / 60% no-repeat, #040404;
-  }
+.community-banner {
+  background: linear-gradient(to right, #040404, 70%, transparent), url("../assets/images/communityBanner.png") right / 60% no-repeat, #040404;
+}
+
+.multiline-ellipsis {
+  color: #b1b1b1;
+  -webkit-box-orient: vertical;
+  display: block;
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.fadeoff {
+  pointer-events: none;
+  width: 100%;
+  height: 60px;
+  position: absolute;
+  left: 0;
+  top: -61px;
+  background: -webkit-linear-gradient(top, #00000000 0, rgba(0, 0, 0, 0.984) 100%);
+  background: linear-gradient(to bottom, #00000000 0, rgba(0, 0, 0, 0.984) 100%);
+}
+
+.nav-tab {
+  border-top: 1px solid #3d3d3d;
+  border-right: 1px solid #3d3d3d;
+  cursor: pointer;
+}
+
+.nav-tab:first-child {
+  border-left: 1px solid #3d3d3d;
+}
+
+.nav-tab .nav-tab-item {
+  border-radius: 0;
+  border:none;
+}
+
+.tab-container {
+  background: rgba(219, 213, 213, 0);
+}
