--- a/src/styles/community-styles/Community.module.css
+++ b/src/styles/community-styles/Community.module.css
@@ -1,17 +1,17 @@
 .grid {
   display: grid;
-  gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
+  gap: 0.8rem;
+  grid-template-columns: repeat(5, 1fr);
   grid-auto-rows: auto;
 }
 
 .object-fit {
   max-width: 100%;
-  height: auto;
+  height:110%
 }
 
 .community-banner {
-  background: linear-gradient(to right, #040404, 70%, transparent), url("../assets/images/communityBanner.png") right / 60% no-repeat, #040404;
+  background: linear-gradient(to right, #040404, 70%, transparent), url("../../assets/images/communityBanner.png") right / 60% no-repeat, #040404;
 }
 
 .multiline-ellipsis {
