--- a/src/styles/community-styles/Community.module.css
+++ b/src/styles/community-styles/Community.module.css
@@ -10,10 +10,24 @@
   height:110%
 }
 
-.community-banner {
+/* .community-banner {
   background: linear-gradient(to right, #040404, 70%, transparent), url("../../assets/images/communityBanner.png") right / 60% no-repeat, #040404;
   height:200px
-}
+} */
+
+
+/* .community-banner::before {
+  content: '';
+  background: linear-gradient(to right, #000000, 90%, transparent), url("../../assets/images/communityBanner.png") right / 60% no-repeat, #040404;  
+  background-size: cover;
+  background-position: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+} */
 
 .multiline-ellipsis {
   color: #b1b1b1;
@@ -36,6 +50,18 @@
   background: -webkit-linear-gradient(top, #00000000 0, rgba(0, 0, 0, 0.74) 100%);
   background: linear-gradient(to bottom, #00000000 0, rgba(0, 0, 0, 0.74) 100%);
   z-index:1
+}
+
+.fadeoff-huge {
+  pointer-events: none;
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  left: 0;
+  bottom: 0px;
+  border-radius:10px;
+  background: -webkit-linear-gradient(top, #00000000 0, rgba(0, 0, 0, 0.875) 100%);
+  background: linear-gradient(to bottom, #00000000 0, rgba(0, 0, 0,0.875) 100%);
 }
 
 .nav-tab {
@@ -78,5 +104,4 @@
 .card-review-container:hover .figure {
   transform: translateY(-1rem);
 }
-
 
