--- a/src/styles/community-styles/framer-tabs.css
+++ b/src/styles/community-styles/framer-tabs.css
@@ -9,6 +9,10 @@
     padding-bottom: 0.5rem; /* py-2 (0.5rem bottom padding) */
 }
 
+.btn.active-tab.tab:focus {
+    border-color: transparent
+}
+
 .tab {
     font-size: 1rem; /* text-md */
     position: relative; /* relative */
@@ -40,7 +44,7 @@
     top: 0; /* top-0 */
     left: 0; /* left-0 */
     border-radius: 0.375rem; /* rounded-md */
-    background-color: #000000b2; /* bg-gray-200 */
+    background-color: #255872; /* bg-gray-200 */
 }
 
 
