--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --nav-item-color: #86c232;
+  --nav-item-color: #a9adc1;
   --nav-brand-color: #ffffff;
   --page-background-color: #222629;
 }
@@ -12,7 +12,7 @@
 
 
 .default-bg-color {
-  background: linear-gradient(var(--page-background-color), rgba(0, 0, 0, 0.984));
+  background:var(--page-background-color);
 }
 
 body {
@@ -39,7 +39,7 @@ html {
 .nav-item {
   .nav-link {
     color: var(--nav-item-color);
-    font-weight: 300;
+    font-weight: 500;
     display: inline-block;
  
     &.show,
@@ -458,34 +458,31 @@ textarea {
   color:white
 }
 
+/*for community review 2 big images effect */
+.card-effect {
+  transition:transform .5s ease 0s;
+  backface-visibility: hidden;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  will-change: transform;
 
-.heart-icon {
+}
+
+.card-effect:hover {
+  transform: perspective(8000px) rotateX(8deg) rotateY(5deg);
+}
+
+.fade-in-image {
+  opacity: 0;                    /* Start fully transparent */
+  transform: scale(1.3);        /* Slightly scale down the image */
+  transition: opacity 0.6s ease, transform 0.6s ease;
   position: relative;
-  cursor: pointer;
-}
-
-.spark {
-  transform-origin: 27px 27px; 
-  transition: opacity 1s ease-in-out;
-}
-
-.heart-icon:hover .spark {
-  animation: spark-animation 1.5s ease-in-out forwards;
 }
 
 
-
-@keyframes spark-animation {
-  0% {
-    opacity: 0;
-    transform: scale(0.5);
-  }
-  50% {
-    opacity: 1;
-    transform: scale(1.2);
-  }
-  100% {
-    opacity: 0;
-    transform: scale(0);
-  }
+.fade-in-image.animate {
+  opacity: 1;                    /* Fade to fully opaque */
+  transform: scale(1);           /* Scale back to normal */
 }
