--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  background-color: #212529 !important;
+  background-color: #1F2028 !important;
 }
 html {
   scroll-behavior: smooth;
@@ -500,4 +500,23 @@ textarea {
 
 .fade-in-from-bottom.fade-in-delay-2 {
   animation-delay: 0.6s;
+}
+
+/* for hovering circle*/
+.hover-circle {
+  color: #4b4c53;
+  position: absolute;
+  top: -14px;
+  left: -14px;
+}
+
+.circle-animate {
+  transition: stroke-dashoffset 0.5s ease;
+  stroke:white
+}
+
+/* On hover, animate the second circle */
+.hover-circle:hover .circle-animate,
+.learn-more-hover-circle:hover .hover-circle .circle-animate {
+  stroke-dashoffset: 0; /* Draw the circle */
 }
