--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -335,7 +335,8 @@ textarea {
   opacity: 0;
   transform: translateY(20vh);
   visibility: hidden;
-  transition: opacity 1s ease-out, transform 1s ease-out;
+  transition: opacity 1s ease-out, transform 1s ease-out, box-shadow 0.3s ease; /* Smooth transition for box-shadow */
+  ;
   will-change: opacity, visibility, transform;
 
 }
@@ -365,18 +366,15 @@ textarea {
   transform: scale(1);
   visibility: visible;
 }
-.fade-in-from-z.is-visible .item-0,
-.fade-in-section.is-visible .item-0 {
-  transition-delay:0s
-}
+
 .fade-in-from-z.is-visible .item-1,
 .fade-in-section.is-visible .item-1 {
-  transition-delay:0.3s
+  transition: opacity 1s ease-out 0.3s, transform 1s ease-out 0.3s, box-shadow 0.3s ease; /* Smooth transition for box-shadow */
 
 }
 .fade-in-from-z.is-visible .item-2,
 .fade-in-section.is-visible .item-2 {
-    transition-delay:0.6s
+  transition: opacity 1s ease-out 0.6s, transform 1s ease-out 0.6s, box-shadow 0.3s ease; /* Smooth transition for box-shadow */
 
 }
 
@@ -511,7 +509,7 @@ textarea {
 }
 
 .circle-animate {
-  transition: stroke-dashoffset 0.5s ease;
+  transition: stroke-dashoffset 0.5s ease,;
   stroke:white
 }
 
@@ -519,4 +517,15 @@ textarea {
 .hover-circle:hover .circle-animate,
 .learn-more-hover-circle:hover .hover-circle .circle-animate {
   stroke-dashoffset: 0; /* Draw the circle */
+}
+
+
+
+.test:hover {
+  border-color: #1D2426 !important;
+  /* Create the ring effect */
+  
+  box-shadow: 
+    0 0 0 6px #1D2426, /* White shadow to simulate the offset */
+    0 0 0 8px rgb(55, 255, 131); /* Blue ring effect */
 }
