--- a/src/styles/playlist-styles/Playlist-TypeOfMedia.module.css
+++ b/src/styles/playlist-styles/Playlist-TypeOfMedia.module.css
@@ -43,7 +43,7 @@
   }
   
   .highlight-media {
-    background:rgb(189, 255, 197) !important;
+    background:#ddffa1 !important;
     color:black;
   }
   
