--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -77,9 +77,7 @@
   gap: 2em;
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
-  padding-right:5em;
-  padding-left:5em;
-
+  width:90%;
 }
 .quote-grid {
   display: grid;
@@ -109,7 +107,7 @@
 }
 
 .img-width-2 {
-  width:70%
+  width:90%
 }
 
 @media screen and (max-width: 1200px) {
@@ -200,7 +198,7 @@
 } */
 
 .fs-header {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
 }
 
 .fs-para {
@@ -248,4 +246,19 @@
 
 .get-started:hover .icon {
   transform: translateX(6px) translateY(0);
+}
+
+
+.logo-grid {
+  display: grid;
+  gap: 4em;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+    justify-items: start;
+    align-items:center;
+}
+
+.support-button {
+  font-size: 15px;
+  height:45px
 }
